# StudySync

./: .gitignore  CHANGES.md  QUICKSTART.md  README.md  pyproject.toml  requirements.md  run_backend.sh  technical-requirements.md  writeup.md
backend/: .env.example  __init__.py  auth_utils.py  config.py  database.py  main.py  models.py
backend/agents/: __init__.py  agents.py  assessment_agent.py  curriculum_agent.py  orchestrator.py  runner.py  scheduler_agent.py  tools.py  user_profiler.py
backend/agents/adk/: __init__.py  assessment.py  curriculum.py  orchestrator.py  resource_finder.py  scheduler.py  user_profiler.py
backend/agents/adk/tools/: __init__.py  resource_tools.py
backend/api/: __init__.py  assessments.py  auth.py  learning_paths.py  schedule.py
backend/services/: calendar_service.py  llm_service.py  progress_tracker.py  resource_discovery_service.py
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Toast.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Landing.tsx  Login.tsx  Onboarding.tsx  Quiz.tsx  Session.tsx
frontend/src/types/: index.ts
slides/: package-lock.json  package.json  slides.md  video_script.md
